fix: update workflow with inherit secrets

--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -20,3 +20,4 @@ jobs:
     uses: spaenleh/repo-infra/.github/workflows/apply-migration.yml@main
     with:
       config-path: .github/labeler.yml
+    secrets: inherit
